@@ -15,7 +15,6 @@ Module::Build->new(
     'build_requires'    => {
         'Test::More'        => 0,
         'Test::Differences' => 0,
-        'Test::Output'      => 0.12,
         'IO::Scalar'        => 0,
         },
     )->create_build_script();
