@@ -4,6 +4,8 @@ Revision history for Perl extension TAP::Formatter::JUnit.
     - Add support for ALLOW_PASSING_TODOS environment variable, which forces
       T:F:JUnit to treat passing TODOs as a "pass" and not a "fail" condition.
       Thanks to Joe McMahon.
+    - Removed need for Test::Output; I forgot that you can pass a FH directly
+      in to TAP::Harness.  Doh!
 
 0.04    Wed Jan 13 15:51 PST 2010
     - extra escaping/cleanup of characters before inserting them into the XML
